--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>*Landing page</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <header class="showcase">
+    <h1>Welcome to my page.</h1>
+    <p>It is truly magnificent.Exceptional.One of its kind.Sign up now to learn how to craft one yourself.</p>
+    <a href="#" class="button">Sign up</a>
+  </header>
 </body>
 </html>
