--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header class="showcase">
+  <header class="page-header">
     <h1>Welcome to my page.</h1>
     <p>It is truly magnificent.Exceptional.One of its kind.Sign up now to learn how to craft one yourself.</p>
     <a href="#" class="button">Sign up</a>
