--- a/index.html
+++ b/index.html
@@ -13,5 +13,166 @@
     <p>It is truly magnificent.Exceptional.One of its kind.Sign up now to learn how to craft one yourself.</p>
     <a href="#" class="button">Sign up</a>
   </header>
+  <section class="about"> 
+      <div class="flex-row-reversed">
+          <article class="offer">
+            <h2>What can we offer?</h2>
+            <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
+          </article>
+          <img src="img/about-img.jpg" alt="">
+      </div>
+  </section>
+  <section class="tech">
+    <h2>What do we use?</h2>
+    <article>
+      <figure class="html-logo">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+          width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
+          preserveAspectRatio="xMidYMid meet">
+         <metadata>
+         Created by potrace 1.15, written by Peter Selinger 2001-2017
+         </metadata>
+         <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
+         fill="#000000" stroke="none">
+         <path d="M1080 4770 l0 -350 120 0 120 0 0 120 0 120 100 0 100 0 0 -120 0
+         -120 120 0 120 0 0 350 0 350 -120 0 -120 0 0 -110 0 -110 -100 0 -100 0 0
+         110 0 110 -120 0 -120 0 0 -350z"/>
+         <path d="M1850 5005 l0 -115 100 0 100 0 0 -235 0 -235 125 0 125 0 0 235 0
+         235 100 0 100 0 0 115 0 115 -325 0 -325 0 0 -115z"/>
+         <path d="M2590 4770 l0 -350 120 0 120 0 0 163 0 162 73 -112 c39 -62 75 -113
+         79 -113 3 0 40 53 82 118 l76 117 0 -167 0 -168 120 0 120 0 0 350 0 350 -129
+         0 -129 0 -43 -72 c-23 -40 -55 -92 -70 -116 l-27 -42 -68 115 -69 115 -127 0
+         -128 0 0 -350z"/>
+         <path d="M3480 4770 l0 -350 285 0 285 0 0 120 0 120 -165 0 -165 0 0 230 0
+         230 -120 0 -120 0 0 -350z"/>
+         <path d="M745 4068 c3 -29 78 -863 166 -1853 88 -990 163 -1803 167 -1806 11
+         -11 1454 -409 1480 -409 25 0 1473 399 1484 409 4 3 79 818 167 1811 89 993
+         164 1826 167 1853 l6 47 -1822 0 -1821 0 6 -52z m2955 -720 c0 -19 -28 -334
+         -35 -395 l-6 -53 -870 0 -869 0 4 -22 c3 -13 13 -116 22 -230 l17 -208 830 0
+         829 0 -6 -42 c-3 -24 -31 -335 -62 -693 -34 -383 -61 -655 -68 -661 -6 -7
+         -217 -68 -468 -138 l-457 -126 -466 129 c-257 71 -468 131 -470 133 -1 2 -15
+         138 -29 303 -14 165 -29 326 -32 358 l-7 57 235 0 235 0 13 -170 c7 -94 18
+         -176 24 -184 11 -13 467 -141 496 -139 21 2 489 129 495 135 4 4 55 525 55
+         563 0 13 -93 15 -784 15 l-784 0 -6 48 c-8 64 -116 1281 -116 1309 l0 23 1140
+         0 c905 0 1140 -3 1140 -12z"/>
+         </g>
+         </svg>
+      </figure>
+      <figure class="css-logo">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+          width="146.000000pt" height="194.000000pt" viewBox="0 0 146.000000 194.000000"
+          preserveAspectRatio="xMidYMid meet">
+         <metadata>
+         Created by potrace 1.15, written by Peter Selinger 2001-2017
+         </metadata>
+         <g transform="translate(0.000000,194.000000) scale(0.100000,-0.100000)"
+         fill="#000000" stroke="none">
+         <path d="M390 1700 l0 -120 95 0 95 0 0 34 0 35 -52 3 -53 3 -3 43 -3 42 55 0
+         56 0 0 40 0 40 -95 0 -95 0 0 -120z"/>
+         <path d="M680 1777 c0 -36 6 -49 35 -77 19 -19 35 -38 35 -42 0 -4 -16 -8 -35
+         -8 -33 0 -35 -2 -35 -35 l0 -35 95 0 95 0 0 37 c0 30 -8 45 -42 80 l-42 43 42
+         0 42 0 0 40 0 40 -95 0 -95 0 0 -43z"/>
+         <path d="M960 1777 c0 -36 6 -49 35 -77 19 -19 35 -38 35 -42 0 -4 -16 -8 -35
+         -8 -33 0 -35 -2 -35 -35 l0 -35 95 0 95 0 0 37 c0 30 -8 45 -42 80 l-42 43 42
+         0 42 0 0 40 0 40 -95 0 -95 0 0 -43z"/>
+         <path d="M135 1433 c3 -16 30 -307 61 -648 31 -341 57 -621 58 -622 0 0 117
+         -32 259 -71 l257 -70 258 70 c141 39 258 71 258 71 1 1 27 283 58 627 31 344
+         59 635 62 648 l4 22 -640 0 -639 0 4 -27z m1029 -310 c-4 -43 -8 -79 -9 -81
+         -1 -1 -85 -38 -186 -82 l-184 -79 178 -1 c150 0 177 -2 177 -15 0 -53 -42
+         -471 -48 -476 -4 -4 -78 -28 -165 -53 l-157 -46 -162 48 c-186 56 -171 39
+         -182 200 l-8 102 86 0 86 0 0 -52 c0 -29 4 -59 9 -66 4 -7 43 -22 87 -33 l79
+         -21 81 22 c45 12 86 25 91 29 6 3 13 50 17 104 l6 97 -275 0 -275 0 -4 23 c-3
+         12 -7 48 -8 79 l-3 58 95 40 c52 22 138 58 190 80 l95 39 -197 1 -196 0 -6 40
+         c-3 22 -9 58 -12 80 l-6 40 407 0 406 0 -7 -77z"/>
+         </g>
+         </svg>
+      </figure>
+      <figure class="react-logo">
+          <svg
+          xmlns:dc="http://purl.org/dc/elements/1.1/"
+          xmlns:cc="http://creativecommons.org/ns#"
+          xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+          xmlns:svg="http://www.w3.org/2000/svg"
+          xmlns="http://www.w3.org/2000/svg"
+          id="svg10"
+          version="1.1"
+          preserveAspectRatio="xMinYMin meet"
+          viewBox="0 0 256 230"
+          height="2246"
+          width="2500">
+         <metadata
+            id="metadata16">
+           <rdf:RDF>
+             <cc:Work
+                rdf:about="">
+               <dc:format>image/svg+xml</dc:format>
+               <dc:type
+                  rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+             </cc:Work>
+           </rdf:RDF>
+         </metadata>
+         <defs
+            id="defs14" />
+         <path
+            id="path2"
+            fill="#FFF"
+            d="M.754 114.75c0 19.215 18.763 37.152 48.343 47.263-5.907 29.737-1.058 53.706 15.136 63.045 16.645 9.6 41.443 2.955 64.98-17.62 22.943 19.744 46.13 27.514 62.31 18.148 16.63-9.627 21.687-35.221 15.617-65.887 30.81-10.186 48.044-25.481 48.044-44.949 0-18.769-18.797-35.006-47.979-45.052 6.535-31.933.998-55.32-15.867-65.045-16.259-9.376-39.716-1.204-62.996 19.056C104.122 2.205 80.897-4.36 64.05 5.392 47.806 14.795 43.171 39.2 49.097 69.487 20.515 79.452.754 96.057.754 114.75z" />
+         <path
+            id="path4"
+            fill="#53C1DE"
+            d="M201.025 79.674a151.364 151.364 0 0 0-7.274-2.292 137.5 137.5 0 0 0 1.124-4.961c5.506-26.728 1.906-48.26-10.388-55.348-11.787-6.798-31.065.29-50.535 17.233a151.136 151.136 0 0 0-5.626 5.163 137.573 137.573 0 0 0-3.744-3.458c-20.405-18.118-40.858-25.752-53.139-18.643-11.776 6.817-15.264 27.06-10.307 52.39a150.91 150.91 0 0 0 1.67 7.484c-2.894.822-5.689 1.698-8.363 2.63-23.922 8.34-39.2 21.412-39.2 34.97 0 14.004 16.4 28.05 41.318 36.566a128.44 128.44 0 0 0 6.11 1.91 147.813 147.813 0 0 0-1.775 8.067c-4.726 24.89-1.035 44.653 10.71 51.428 12.131 6.995 32.491-.195 52.317-17.525 1.567-1.37 3.14-2.823 4.715-4.346a148.34 148.34 0 0 0 6.108 5.573c19.204 16.525 38.17 23.198 49.905 16.405 12.12-7.016 16.058-28.247 10.944-54.078-.39-1.973-.845-3.988-1.355-6.04 1.43-.422 2.833-.858 4.202-1.312 25.904-8.582 42.757-22.457 42.757-36.648 0-13.607-15.77-26.767-40.174-35.168z" />
+         <path
+            id="path6"
+            fill="#FFF"
+            d="M195.406 142.328c-1.235.409-2.503.804-3.795 1.187-2.86-9.053-6.72-18.68-11.442-28.625 4.507-9.71 8.217-19.213 10.997-28.208 2.311.67 4.555 1.375 6.717 2.12 20.91 7.197 33.664 17.84 33.664 26.04 0 8.735-13.775 20.075-36.14 27.486zm-9.28 18.389c2.261 11.422 2.584 21.749 1.086 29.822-1.346 7.254-4.052 12.09-7.398 14.027-7.121 4.122-22.35-1.236-38.772-15.368-1.883-1.62-3.78-3.35-5.682-5.18 6.367-6.964 12.73-15.06 18.94-24.05 10.924-.969 21.244-2.554 30.603-4.717.46 1.86.87 3.683 1.223 5.466zm-93.85 43.137c-6.957 2.457-12.498 2.527-15.847.596-7.128-4.11-10.09-19.98-6.049-41.265a138.507 138.507 0 0 1 1.65-7.502c9.255 2.047 19.5 3.52 30.45 4.408 6.251 8.797 12.798 16.883 19.396 23.964a118.863 118.863 0 0 1-4.305 3.964c-8.767 7.664-17.552 13.1-25.294 15.835zm-32.593-61.58c-11.018-3.766-20.117-8.66-26.354-14-5.604-4.8-8.434-9.565-8.434-13.432 0-8.227 12.267-18.722 32.726-25.855a139.276 139.276 0 0 1 7.777-2.447c2.828 9.197 6.537 18.813 11.013 28.537-4.534 9.869-8.296 19.638-11.15 28.943a118.908 118.908 0 0 1-5.578-1.746zm10.926-74.37c-4.247-21.703-1.427-38.074 5.67-42.182 7.56-4.376 24.275 1.864 41.893 17.507 1.126 1 2.257 2.047 3.39 3.13-6.564 7.049-13.051 15.074-19.248 23.82-10.627.985-20.8 2.567-30.152 4.686a141.525 141.525 0 0 1-1.553-6.962zm97.467 24.067a306.982 306.982 0 0 0-6.871-11.3c7.21.91 14.117 2.12 20.603 3.601-1.947 6.241-4.374 12.767-7.232 19.457a336.42 336.42 0 0 0-6.5-11.758zm-39.747-38.714c4.452 4.823 8.911 10.209 13.297 16.052a284.245 284.245 0 0 0-26.706-.006c4.39-5.789 8.887-11.167 13.409-16.046zm-40.002 38.78a285.24 285.24 0 0 0-6.378 11.685c-2.811-6.667-5.216-13.222-7.18-19.552 6.447-1.443 13.322-2.622 20.485-3.517a283.79 283.79 0 0 0-6.927 11.384zm7.133 57.683c-7.4-.826-14.379-1.945-20.824-3.348 1.995-6.442 4.453-13.138 7.324-19.948a283.494 283.494 0 0 0 6.406 11.692 285.27 285.27 0 0 0 7.094 11.604zm33.136 27.389c-4.575-4.937-9.138-10.397-13.595-16.27 4.326.17 8.737.256 13.22.256 4.606 0 9.159-.103 13.64-.303-4.4 5.98-8.843 11.448-13.265 16.317zm46.072-51.032c3.02 6.884 5.566 13.544 7.588 19.877-6.552 1.495-13.625 2.699-21.078 3.593a337.537 337.537 0 0 0 6.937-11.498 306.632 306.632 0 0 0 6.553-11.972zm-14.915 7.15a316.478 316.478 0 0 1-10.84 17.49c-6.704.479-13.632.726-20.692.726-7.031 0-13.871-.219-20.458-.646A273.798 273.798 0 0 1 96.72 133.28a271.334 271.334 0 0 1-9.64-18.206 273.864 273.864 0 0 1 9.611-18.216v.002a271.252 271.252 0 0 1 10.956-17.442c6.72-.508 13.61-.774 20.575-.774 6.996 0 13.895.268 20.613.78a290.704 290.704 0 0 1 10.887 17.383 316.418 316.418 0 0 1 9.741 18.13 290.806 290.806 0 0 1-9.709 18.29zm19.913-107.792c7.566 4.364 10.509 21.961 5.755 45.038a127.525 127.525 0 0 1-1.016 4.492c-9.374-2.163-19.554-3.773-30.212-4.773-6.209-8.841-12.642-16.88-19.1-23.838a141.92 141.92 0 0 1 5.196-4.766c16.682-14.518 32.273-20.25 39.377-16.153z" />
+         <path
+            id="path8"
+            fill="#53C1DE"
+            d="M128.221 94.665c11.144 0 20.177 9.034 20.177 20.177 0 11.144-9.033 20.178-20.177 20.178-11.143 0-20.177-9.034-20.177-20.178 0-11.143 9.034-20.177 20.177-20.177" />
+       </svg>
+      </figure>
+      <figure class="laravel-logo">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+          width="1796.000000pt" height="1229.000000pt" viewBox="0 0 1796.000000 1229.000000"
+          preserveAspectRatio="xMidYMid meet">
+         <metadata>
+         Created by potrace 1.15, written by Peter Selinger 2001-2017
+         </metadata>
+         <g transform="translate(0.000000,1229.000000) scale(0.100000,-0.100000)"
+         fill="#000000" stroke="none">
+         <path d="M3545 12269 c-494 -38 -2132 -170 -2715 -219 -424 -35 -609 -54 -645
+         -66 -81 -28 -130 -67 -160 -129 -26 -51 -27 -61 -23 -162 4 -88 10 -125 37
+         -203 56 -165 392 -897 3056 -6655 361 -781 676 -1462 701 -1514 104 -221 251
+         -360 449 -421 89 -28 253 -37 366 -21 122 18 1035 250 3033 772 462 120 840
+         218 841 216 1 -1 165 -297 365 -657 842 -1520 1438 -2566 1618 -2840 100 -151
+         220 -276 315 -326 71 -38 74 -39 199 -42 116 -4 138 -1 255 28 163 41 382 113
+         1023 340 1310 463 4305 1540 4894 1760 121 45 250 97 288 116 188 95 210 190
+         85 374 -73 107 -884 1200 -1778 2397 l-428 572 52 15 c29 8 588 157 1242 331
+         725 193 1211 327 1245 343 73 37 103 81 97 144 -5 57 -10 66 -203 300 -83 100
+         -467 577 -854 1058 -875 1088 -1063 1320 -1129 1392 -69 76 -173 153 -239 178
+         -108 41 -74 45 -1932 -266 -509 -85 -954 -163 -990 -174 -81 -24 -154 -70
+         -174 -109 -18 -35 -21 -95 -5 -138 5 -17 421 -613 924 -1324 746 -1057 910
+         -1295 897 -1301 -37 -17 -5397 -1296 -5404 -1290 -4 4 -979 1634 -2169 3622
+         -1189 1988 -2185 3649 -2213 3690 -73 107 -143 174 -213 201 -53 21 -76 23
+         -258 25 -126 2 -292 -5 -450 -17z m387 -501 c9 -7 42 -58 74 -113 31 -55 951
+         -1643 2044 -3530 1093 -1886 1994 -3444 2003 -3462 22 -42 21 -86 -1 -106 -10
+         -9 -83 -32 -163 -51 -239 -58 -2997 -716 -3089 -737 -204 -48 -213 -47 -240
+         14 -44 104 -2152 4457 -3314 6846 -212 437 -389 811 -392 831 -4 24 -1 40 8
+         47 7 6 322 38 723 73 391 34 1054 92 1475 130 421 37 786 68 811 69 25 1 52
+         -5 61 -11z m11530 -2924 c33 -17 61 -50 289 -344 100 -129 442 -563 758 -965
+         461 -584 576 -736 576 -759 0 -25 -7 -33 -45 -52 -25 -12 -115 -38 -200 -59
+         -85 -20 -564 -138 -1064 -261 -500 -124 -910 -223 -911 -222 -60 76 -1603
+         2204 -1616 2227 -21 39 -12 68 24 76 12 2 128 23 257 45 327 57 1767 319 1810
+         329 40 10 83 5 122 -15z m-723 -3402 c20 -21 78 -98 130 -172 95 -136 404
+         -560 1238 -1701 248 -339 468 -641 488 -672 64 -97 45 -118 -183 -195 -248
+         -84 -3697 -1254 -4207 -1427 -264 -90 -586 -200 -715 -245 -319 -111 -308
+         -109 -367 -79 -29 15 -66 48 -95 83 -64 80 -292 464 -1080 1821 -668 1150
+         -700 1207 -691 1214 4 4 1183 313 2618 686 1436 373 2644 688 2685 701 110 33
+         135 32 179 -14z"/>
+         </g>
+         </svg>
+      </figure>
+    </article>
+  </section>
 </body>
 </html>
