--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
           <img src="img/about-img.jpg" alt="">
       </div>
   </section>
+  <section class="services">
+    <h2>What can we co for you?</h2>
+    <article>
+      <figure class="web">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="640" height="512" viewBox="0 0 640 512">
+            <title></title>
+            <g id="icomoon-ignore">
+            </g>
+            <path d="M416 368l48 48 160-160-160-160-48 48 112 112z"></path>
+            <path d="M224 144l-48-48-160 160 160 160 48-48-112-112z"></path>
+            <path d="M350.649 75.26l34.734 9.472-95.993 352.013-34.734-9.472 95.994-352.013z"></path>
+            </svg>
+            <figcaption>Web sites</figcaption>
+      </figure>
+      <figure class="desing">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+            <path d="M27 0c2.761 0 5 2.239 5 5 0 1.126-0.372 2.164-1 3l-2 2-7-7 2-2c0.836-0.628 1.874-1 3-1zM2 23l-2 9 9-2 18.5-18.5-7-7-18.5 18.5zM22.362 11.362l-14 14-1.724-1.724 14-14 1.724 1.724z"></path>
+            </svg>
+            <figcaption>Graphics design</figcaption>      
+      </figure>
+      <figure class="media">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="36" height="32" viewBox="0 0 36 32">
+            <path d="M24 24.082v-1.649c2.203-1.241 4-4.337 4-7.432 0-4.971 0-9-6-9s-6 4.029-6 9c0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h28c0-4.030-5.216-7.364-12-7.918z"></path>
+            <path d="M10.225 24.854c1.728-1.13 3.877-1.989 6.243-2.513-0.47-0.556-0.897-1.176-1.265-1.844-0.95-1.726-1.453-3.627-1.453-5.497 0-2.689 0-5.228 0.956-7.305 0.928-2.016 2.598-3.265 4.976-3.734-0.529-2.39-1.936-3.961-5.682-3.961-6 0-6 4.029-6 9 0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h8.719c0.454-0.403 0.956-0.787 1.506-1.146z"></path>
+            </svg>
+            <figcaption>Social media management</figcaption>
+      </figure>
+    </article>
+  </section>
   <section class="tech">
     <h2>What do we use?</h2>
     <article>
@@ -57,6 +86,7 @@
          0 c905 0 1140 -3 1140 -12z"/>
          </g>
          </svg>
+         <figcaption>Html</figcaption>
       </figure>
       <figure class="css-logo">
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -86,6 +116,7 @@
          c-3 22 -9 58 -12 80 l-6 40 407 0 406 0 -7 -77z"/>
          </g>
          </svg>
+         <figcaption>Css</figcaption>
       </figure>
       <figure class="react-logo">
           <svg
@@ -130,6 +161,7 @@
             fill="#53C1DE"
             d="M128.221 94.665c11.144 0 20.177 9.034 20.177 20.177 0 11.144-9.033 20.178-20.177 20.178-11.143 0-20.177-9.034-20.177-20.178 0-11.143 9.034-20.177 20.177-20.177" />
        </svg>
+       <figcaption>React JS</figcaption>
       </figure>
       <figure class="laravel-logo">
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -171,6 +203,7 @@
          135 32 179 -14z"/>
          </g>
          </svg>
+         <figcaption>Laravel</figcaption>
       </figure>
     </article>
   </section>
