--- a/index.html
+++ b/index.html
@@ -237,6 +237,26 @@
         </figure>
       </article>
     </section>
+    <section class="sign-up">
+        <h2>Sign up</h2>
+        <form action="/my-handling-form-page" method="post">
+          <div>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="user_name" placeholder="Name">
+          </div>
+          <div>
+              <label for="mail">E-mail:</label>
+              <input type="email" id="mail" name="user_mail" placeholder="example@domain.com">
+          </div>
+          <div>
+              <label for="msg">Message:</label>
+              <textarea id="msg" name="user_message" placeholder="How can we help you?"></textarea>
+          </div>
+          <div class="button">
+              <button type="button">Send your message</button>
+          </div>
+      </form>
+    </section>
   </main>
   <footer class="page-footer">
     <a href="#">
