wordking on responsivibility

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <h1>Welcome to our page.</h1>
     <p>It is truly magnificent.Exceptional.One of its kind.Sign up now to learn to get one yourself.</p>
-    <a href="#" class="button">Sign up</a>
+    <a href="#sign-up" class="button">Sign up</a>
   </header>
   <main>
     <section class="text-sec"> 
@@ -54,8 +54,9 @@
               <h2>What do we do differently?</h2>
               <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
             </article>
-            <img src="img/diff-img.jpeg" alt="">
+           <img src="img/diff-img.jpeg" alt="">
         </div>
+        </section>
         <section class="contact">
             <article>
               <figure class="phone">
@@ -237,7 +238,7 @@
         </figure>
       </article>
     </section>
-    <section class="sign-up">
+    <section class="sign-up" id="sign-up">
         <h2>Sign up</h2>
         <form action="/my-handling-form-page" method="post">
           <div>
