--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h2>What do we use?</h2>
       <article>
         <figure class="html-logo">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <svg
             width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
             preserveAspectRatio="xMidYMid meet">
           <metadata>
@@ -120,7 +120,7 @@
           <figcaption>Html</figcaption>
         </figure>
         <figure class="css-logo">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <svg xmlns="http://www.w3.org/2000/svg"
             width="146.000000pt" height="194.000000pt" viewBox="0 0 146.000000 194.000000"
             preserveAspectRatio="xMidYMid meet">
           <metadata>
@@ -151,10 +151,6 @@
         </figure>
         <figure class="react-logo">
             <svg
-            xmlns:dc="http://purl.org/dc/elements/1.1/"
-            xmlns:cc="http://creativecommons.org/ns#"
-            xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-            xmlns:svg="http://www.w3.org/2000/svg"
             xmlns="http://www.w3.org/2000/svg"
             id="svg10"
             version="1.1"
@@ -164,14 +160,6 @@
             width="2500">
           <metadata
               id="metadata16">
-            <rdf:RDF>
-              <cc:Work
-                  rdf:about="">
-                <dc:format>image/svg+xml</dc:format>
-                <dc:type
-                    rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-              </cc:Work>
-            </rdf:RDF>
           </metadata>
           <defs
               id="defs14" />
@@ -195,7 +183,7 @@
         <figcaption>React JS</figcaption>
         </figure>
         <figure class="laravel-logo">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <svg xmlns="http://www.w3.org/2000/svg"
             width="1796.000000pt" height="1229.000000pt" viewBox="0 0 1796.000000 1229.000000"
             preserveAspectRatio="xMidYMid meet">
           <metadata>
