--- a/index.html
+++ b/index.html
@@ -6,99 +6,121 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>*Landing page</title>
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header" role="banner">
     <h1>Welcome to our page.</h1>
     <p>Do you like it?Sign up now to learn to get one yourself.</p>
     <a href="#sign-up" class="button">Sign up</a>
   </header>
-  <main>
+  <main role="main">
     <section class="text-sec"> 
         <div class="flex-row-reversed">
-            <article>
-              <h2>What can we offer?</h2>
+            <div class="description">
+              <h2>What do we offer?</h2>
               <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
-            </article>
+            </div>
             <img src="img/about-img.jpg" alt="">
         </div>
     </section>
     <section class="services">
       <h2>What can we co for you?</h2>
-      <article>
-        <figure class="web">
-            <img src="img/sphere.svg" alt="">
-            <figcaption>Web sites</figcaption>
-        </figure>
-        <figure class="desing">
-            <img src="img/pencil.svg" alt="">
-        <figcaption>Graphics design</figcaption>      
-        </figure>
-        <figure class="media">
-            <img src="img/users.svg" alt="">
-            <figcaption>Media Campaigns</figcaption>
-        </figure>
-      </article>
+      <ul>
+        <li>
+          <figure class="web">
+              <img src="img/sphere.svg" alt="">
+              <figcaption>Web sites</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="desing">
+              <img src="img/pencil.svg" alt="">
+          <figcaption>Graphics design</figcaption>      
+          </figure>
+        </li>
+        <li>
+          <figure class="media">
+              <img src="img/users.svg" alt="">
+              <figcaption>Media Campaigns</figcaption>
+          </figure>
+        </li>
+        </ul>
     </section>
     <section class="text-sec"> 
         <div class="flex-row">
-            <article>
+            <div class="description">
               <h2>What do we do differently?</h2>
               <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
-            </article>
+            </div>
            <img src="img/diff-img.jpeg" alt="">
         </div>
         </section>
         <section class="contact">
-            <article>
-              <figure class="phone">
-               <img src="img/phone.svg" alt="">        
-                <figcaption>224 524 213</figcaption>
-              </figure>
+          <h2 class="hidden">Contact us</h2>
+          <ul>
+              <li>
+                <figure class="phone">
+                  <img src="img/phone.svg" alt="">        
+                  <figcaption>224 524 213</figcaption>
+                </figure>
+              </li>
+              <li>
               <figure class="email">
                   <img src="img/mail.svg" alt="">   
-                <figcaption>web@makers.com</figcaption>
+                  <figcaption>web@makers.com</figcaption>
               </figure>
+              </li>
+              <li>
               <figure class="address">
                   <img src="img/home.svg" alt="">   
-                <figcaption>33 Mall, NYC</figcaption>
+                  <figcaption>33 Mall, NYC</figcaption>
               </figure>
-            </article>
+              </li>
+            </ul>
           </section>
     <section class="tech">
       <h2>What do we use?</h2>
-      <article>
-        <figure class="html-logo">
+      <ul>
+        <li>
+          <figure class="html-logo">
             <img src="img/html-logo.svg" alt="Html 5">
-          <figcaption>Html</figcaption>
-        </figure>
-        <figure class="css-logo">
-            <img src="img/css-logo.svg" alt="Css">
+            <figcaption>Html</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="css-logo">
+              <img src="img/css-logo.svg" alt="Css">
           <figcaption>Css</figcaption>
-        </figure>
-        <figure class="react-logo">
-            <img src="img/react-logo.svg" alt="React JS">
-        <figcaption>React JS</figcaption>
-        </figure>
-        <figure class="laravel-logo">
-          <img src="img/laravel-logo.svg" alt="Laravel">  
-        <figcaption>Laravel</figcaption>
-        </figure>
-      </article>
+          </figure>
+        </li>
+        <li>
+          <figure class="react-logo">
+              <img src="img/react-logo.svg" alt="React JS">
+          <figcaption>React JS</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="laravel-logo">
+            <img src="img/laravel-logo.svg" alt="Laravel">  
+          <figcaption>Laravel</figcaption>
+          </figure>
+        </li>
+      </ul>
     </section>
     <section class="sign-up" id="sign-up">
         <h2>Sign up</h2>
-        <form action="/my-handling-form-page" method="post">
+        <form role="form">
           <div>
-              <label for="name">Name:</label>
+              <label class="hidden" for="name">Name:</label>
               <input type="text" id="name" name="user_name" placeholder="Name">
           </div>
           <div>
-              <label for="mail">E-mail:</label>
+              <label class="hidden" for="mail">E-mail:</label>
               <input type="email" id="mail" name="user_mail" placeholder="example@domain.com">
           </div>
           <div>
-              <label for="msg">Message:</label>
+              <label class="hidden" for="msg">Message:</label>
               <textarea id="msg" name="user_message" placeholder="How can we help you?"></textarea>
           </div>
           <div class="button">
@@ -107,7 +129,7 @@
       </form>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer" role="contentinfo">
     <a href="#">
         <img src="img/google-plus.svg" alt="Google Plus">
      </a>
