fixed typos;added some text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </section>
     <section class="services">
-      <h2>What can we co for you?</h2>
+      <h2>What can we do for you?</h2>
       <ul>
         <li>
           <figure class="web">
@@ -50,8 +50,8 @@
     <section class="text-sec"> 
         <div class="flex-row">
             <div class="description">
-              <h2>What do we do differently?</h2>
-              <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
+              <h2>What is special about us?</h2>
+              <p>We take an individual aproach to each client, making the end product unique and personal.Our customers participate in the design proccess of making websites, graphics and share thier insights on advertisments campaigns.Taking all of this things into account, you get the best possible product.Always.</p>
             </div>
            <img src="img/diff-img.jpeg" alt="">
         </div>
