fixed the writing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header" role="banner">
     <h1>Welcome to our page.</h1>
-    <p>Do you like it?Sign up now to learn to get one yourself.</p>
+    <p>Do you like it? Sign up now and get one yourself.</p>
     <a href="#sign-up" class="button">Sign up</a>
   </header>
   <main role="main">
@@ -19,7 +19,7 @@
         <div class="flex-row-reversed">
             <div class="description">
               <h2>What do we offer?</h2>
-              <p>As a team consisting of long-term specialists we can ensure high quality products and services.Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best we can.Ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
+              <p>As a team consisting of long-term specialists we can ensure high quality products and services. Troughout the years of working on modern websites we accumuleted valuable experience and strengthened our passion to deliver the best end product possible. By ordering our services, you are guaranteed 24 hours of free customer service available even up to a month after receving our product.</p>
             </div>
             <img src="img/about-img.jpg" alt="">
         </div>
@@ -51,7 +51,7 @@
         <div class="flex-row">
             <div class="description">
               <h2>What is special about us?</h2>
-              <p>We take an individual aproach to each client, making the end product unique and personal.Our customers participate in the design proccess of making websites, graphics and share thier insights on advertisments campaigns.Taking all of this things into account, you get the best possible product.Always.</p>
+              <p>We take an individual aproach to each client, making the end product unique and adjusted to your personal preferences. Our customers participate in the design proccess of making websites and graphics, and share thier insights on advertisments campaigns. Taking all of these things into account, you always get the best possible product.</p>
             </div>
            <img src="img/diff-img.jpeg" alt="">
         </div>
